k8s/front/deployment-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspu-frontend
  namespace: default
  labels:
    app: frontend
spec:
  replicas: 2

  
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: aspu-frontend-container
          image: bm106/aspu-frontend:v5.5.4
          resources:
            requests:
              memory: 1Gi
              cpu: 1000m
            limits:
              memory: 2Gi
              cpu: 1500m
          ports:
            - containerPort: 80
