k8s/front/svc-front.yml
apiVersion: v1
kind: Service
metadata:
  name: aspu-frontend-service
  namespace: default
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30002
