k8s/front/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspu-hub-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: traefik
  rules:
  - host: aspu-hub.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: aspu-api
            port:
              number: 80
      - path: /storage 
        pathType: Prefix
        backend:
          service:
            name: aspu-api
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: aspu-web
            port:
              number: 80
      - path: /supervisor
        pathType: Prefix
        backend:
          service:
            name: aspu-web
            port:
              number: 80
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: aspu-frontend-service
            port:
              number: 80
